RESOLVED FIXED146464
Java Plugin cannot launch JavaUpdater.app after renaming
https://bugs.webkit.org/show_bug.cgi?id=146464
Summary Java Plugin cannot launch JavaUpdater.app after renaming
Anders Carlsson
Reported 2015-06-30 12:07:10 PDT
Java Plugin cannot launch JavaUpdater.app after renaming
Attachments
Patch (2.16 KB, patch)
2015-06-30 12:09 PDT, Anders Carlsson
thorton: review+
Anders Carlsson
Comment 1 2015-06-30 12:09:04 PDT
Anders Carlsson
Comment 2 2015-06-30 12:13:39 PDT
Alexey Proskuryakov
Comment 3 2015-06-30 13:11:50 PDT
Comment on attachment 255836 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=255836&action=review > Source/WebKit2/UIProcess/Plugins/mac/PluginProcessProxyMac.mm:394 > + NSArray *javaUpdaterAppNames = [NSArray arrayWithObjects:@"Java Updater.app", @"JavaUpdater.app", nil]; Can we use an array literal here?
Note You need to log in before you can comment on or make changes to this bug.