Java Plugin cannot launch JavaUpdater.app after renaming https://bugs.webkit.org/show_bug.cgi?id=146464 rdar://problem/19747153

Reviewed by Tim Horton.

Check for both "JavaUpdater.app" and "Java Updater.app".

* UIProcess/Plugins/mac/PluginProcessProxyMac.mm:
(WebKit::isJavaUpdaterURL):

Canonical link: https://commits.webkit.org/164553@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186125 268f45cc-cd09-0410-ab3c-d52691b4dbfc